tests/lime/fail/tokens/macro_rest/byte_93.wsa
macro m] [push 93] m]
